<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@id/bottomSheet" />

    <include layout="@layout/bottom_sheet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="32dp">

            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.cardview.widget.CardView>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/restaurantButton"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/restaurants"
                    app:icon="@drawable/baseline_restaurant_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/petrolButton"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/petrol"
                    app:icon="@drawable/baseline_local_gas_station_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/hotelsButton"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/hotels"
                    app:icon="@drawable/baseline_hotel_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/coffeeButton"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/coffee"
                    app:icon="@drawable/baseline_coffee_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/shoppingButton"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/shopping"
                    app:icon="@drawable/baseline_shopping_cart_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/hospitalsClinicsButton"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/hospitals_clinics"
                    app:icon="@drawable/baseline_local_hospital_24" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/searchNearbyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:text="@string/search_nearby"
        app:icon="@drawable/baseline_search_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>